tests/compile-fail/compile_fail__anm_bitwise.snap
---
source: tests/compile-fail.rs
expression: stderr
---
error: feature not supported by format
   ┌─ <input>:28:9
   │
28 │         I0 = I0 | I1;
   │         ^^^^^^^^^^^^^ this binary operation not supported in this game


